# lsystem

./: CMakeLists.txt  LICENSE  README.md  colormap_vga1.h  lines_normilize.c  lines_save_mgl.c  lines_save_png.c  lines_save_txt.c  lsystem.c  lsystem.h  lsystem_iter.c  lsystem_parser.y  lsystem_scanner.l  main.c  main_gui.c  turtle.h  turtle_scanner.l  vga_palette.h
fractals/: alien.ls  alpha01.ls  border1.ls  bush.ls  bush2.ls  cross.ls  curves.ls  dekking.ls  dragon.ls  dragoncurd.ls  dragonrnd.ls  flower.ls  gilbert.ls  gosper.ls  hanmer3_0.ls  hex.ls  hilbert.ls  hiwaymed.ls  island.ls  isocepcent.ls  koch.ls  koch_curve.ls  lace.ls  leaves.l  mcworter.ls  mcworter1.ls  mozaic.ls  net.ls  oj-plants.ls  peano.ls  peano1.ls  pentigree.ls  pentive3.ls  plant.ls  serp.ls  serp2.ls  serp3.ls  serpinsky_carpet.ls  sierpinski.ls  snezh.ls  (+8 more)
